Changes: - Product details page added. - Layout and partials update. - Testing update.

--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -18,7 +18,7 @@
 
 <h1>{{pageTitle}}</h1>
 <div class="container">
-    {{>layout/setInfo}}
+    {{>layout/productDetails}}
 </div>
 
 <script src="js/scripts.js"></script>
@@ -28,6 +28,6 @@
 </body>
 
 <footer>
-   {{>layout/footer}}
+    {{>layout/footer}}
 </footer>
 </html>
