Changes: - Product details updated. - Testing update.

--- a/src/main/resources/templates/layout/productDetails.html
+++ b/src/main/resources/templates/layout/productDetails.html
@@ -4,7 +4,7 @@
     <a href="/lego-{{catalogueNumber}}.jpg">
         <img src="/lego-{{catalogueNumber}}.s.jpg" alt="{{title}}" title="{{title}}">
     </a>
-    <p>Tytuł oryginalny: {{catalogueTitle}}</p>
+    <p>Tytuł oryginalny: {{{catalogueTitle}}}</p>
     <p>Numer katalogowy: {{catalogueNumber}}</p>
     <p>Liczba elementów: {{piecesAmount}}</p>
     <p>Seria: {{seriesName}}</p>
