Changes: - Images location refactoring.

--- a/src/main/resources/templates/layout/productDetails.html
+++ b/src/main/resources/templates/layout/productDetails.html
@@ -1,8 +1,8 @@
 <div>
     {{#productDetails}}
     <h1>{{title}}</h1>
-    <a href="/lego-{{catalogueNumber}}.jpg">
-        <img src="/lego-{{catalogueNumber}}.s.jpg" alt="{{title}}" title="{{title}}">
+    <a href="/images/lego-{{catalogueNumber}}.jpg">
+        <img src="/images/lego-{{catalogueNumber}}.s.jpg" alt="{{title}}" title="{{title}}">
     </a>
     <p>Tytuł oryginalny: {{{catalogueTitle}}}</p>
     <p>Numer katalogowy: {{catalogueNumber}}</p>
