--- a/src/main/resources/templates/layout/setInfo.html
+++ b/src/main/resources/templates/layout/setInfo.html
@@ -4,6 +4,6 @@
     <h3>{{releaseYear}}</h3>
     <h3>{{piecesAmount}}</h3>
     <p>{{price}} {{currency}}</p>
-    <img src="lego-{{number}}.s.jpg" alt="{{title}}" title="{{title}}">
+    <img src="/images/lego-{{number}}.s.jpg" alt="{{title}}" title="{{title}}">
     {{/sets}}
 </div>
