--- a/src/main/resources/templates/layout/footer.html
+++ b/src/main/resources/templates/layout/footer.html
@@ -1,4 +1,4 @@
 <br/><br/>
 <p>LEGO® to znak towarowy firmy z Grupy LEGO. Niniejsza witryna nie jest sponsorowana, autoryzowana ani wspierana
     przez Grupę LEGO.</p>
-<p>© 2021 BB-Promo</p>
+<p>© 2021 BB-Promos</p>
