--- a/src/main/resources/templates/layout/setInfo.html
+++ b/src/main/resources/templates/layout/setInfo.html
@@ -4,6 +4,8 @@
     <h3>{{releaseYear}}</h3>
     <h3>{{piecesAmount}}</h3>
     <p>{{price}} {{currency}}</p>
-    <img src="/images/lego-{{number}}.s.jpg" alt="{{title}}" title="{{title}}">
+    <a href="/images/lego-{{number}}.jpg">
+        <img src="/images/lego-{{number}}.s.jpg" alt="{{title}}" title="{{title}}">
+    </a>
     {{/sets}}
 </div>
