--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,27 +15,40 @@
     <link rel="Favicon" type="image/ico" href="/favicon.ico"/>
 </head>
 
-<body>
+<body class="d-flex flex-column h-100">
 
-<header>
-    <form method="get" action="/">
-        <input type="text" name="query" placeholder="Numer lub tytuł zestawu">
-        <button type="submit">Szukaj</button>
-    </form>
-</header>
+<nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">{{pageTitle}}</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <form class="d-flex" method="get" action="/">
+                <input class="form-control me-2" type="search" name="query" placeholder="Numer lub tytuł zestawu"
+                       aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Szukaj</button>
+            </form>
+        </div>
+    </div>
+</nav>
 
-<h1>{{pageTitle}}</h1>
-<div class="container">
-    {{>layout/setInfo}}
-</div>
+<main class="flex-shrink-0">
+    <div class="container">
+        {{>layout/setInfo}}
+    </div>
+</main>
+
+<footer class="footer mt-auto py-3">
+    <div class="container">
+        {{>layout/footer}}
+    </div>
+</footer>
 
 <script src="/js/scripts.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
 </body>
-
-<footer>
-    {{>layout/footer}}
-</footer>
 </html>
