--- a/src/main/resources/templates/layout/setInfo.html
+++ b/src/main/resources/templates/layout/setInfo.html
@@ -10,7 +10,7 @@
         <span class="small">Rok wydania: {{releaseYear}}, liczba elementów: {{piecesAmount}}</span>
     </div>
     <div class="col-2">
-        <button type="button" class="btn btn-success">{{price}} {{currency}}</button>
+        <a href="/products/{{number}}" class="btn btn-outline-success" role="button">{{price}} {{currency}}</a>
     </div>
 </div>
 {{/sets}}
