Changes: - Product details layout update to 3 column layout

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,34 +17,11 @@
 
 <body class="d-flex flex-column h-100">
 
-<nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">{{pageTitle}}</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <form class="d-flex" method="get" action="/">
-                <input class="form-control me-2" type="search" name="query" placeholder="Numer lub tytuł zestawu"
-                       aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Szukaj</button>
-            </form>
-        </div>
-    </div>
-</nav>
+{{> layout/navbar}}
 
-<main class="flex-shrink-0">
-    <div class="container">
-        {{>layout/setInfo}}
-    </div>
-</main>
+{{> layout/setInfo}}
 
-<footer class="footer mt-auto py-3">
-    <div class="container">
-        {{>layout/footer}}
-    </div>
-</footer>
+{{> layout/footer}}
 
 <script src="/js/scripts.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
