--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -15,20 +15,17 @@
     <link rel="Favicon" type="image/ico" href="/favicon.ico"/>
 </head>
 
-<body>
+<body class="d-flex flex-column h-100">
 
-<h1>{{pageTitle}}</h1>
-<div class="container">
-    {{>layout/productDetails}}
-</div>
+{{> layout/navbar}}
+
+{{>layout/productDetails}}
+
+{{> layout/footer}}
 
 <script src="/js/scripts.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
 </body>
-
-<footer>
-    {{>layout/footer}}
-</footer>
 </html>
