Changes: - Image resized to fit the rest of the layout

--- a/src/main/resources/templates/layout/productDetails.html
+++ b/src/main/resources/templates/layout/productDetails.html
@@ -3,13 +3,13 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1>{{title}}</h1>
+                <p class="lead">{{title}}</p>
             </div>
         </div>
         <div class="row">
             <div class="col-4">
                 <a href="/images/lego-{{catalogueNumber}}.jpg">
-                    <img src="/images/lego-{{catalogueNumber}}.s.jpg" alt="{{title}}" title="{{title}}">
+                    <img src="/images/lego-{{catalogueNumber}}.jpg" alt="{{title}}" title="{{title}}" class="img-fluid">
                 </a>
             </div>
             <div class="col-8">
