--- a/src/main/resources/templates/layout/setInfo.html
+++ b/src/main/resources/templates/layout/setInfo.html
@@ -1,5 +1,16 @@
 <main class="flex-shrink-0">
     <div class="container">
+
+        <div class=row>
+            <div class="col">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item active" aria-current="page"><a href="/">Klocki Lego</a></li>
+                    </ol>
+                </nav>
+            </div>
+        </div>
+
         {{#sets}}
         <div class="row mt-4">
             <div class="col-2">
