--- a/src/main/resources/templates/layout/priceComparison.html
+++ b/src/main/resources/templates/layout/priceComparison.html
@@ -5,10 +5,29 @@
         </div>
     </div>
     {{# priceComparison}}
-    <div class="row">
-        <div class="col">{{shopName}}</div>
-        <div class="col">{{price}} {{currency}}</div>
-        <div class="col">{{freeDelivery}}</div>
-    </div>
+    <ul class="list-group shadow">
+        <li class="list-group-item">
+            <div class="container">
+                <div class="row">
+                    <div class="col-2 align-self-center">{{shopName}}</div>
+                    <div class="col-3 align-self-center">
+                        {{price}} {{currency}}
+                        {{# freeDelivery}}
+                        <span class="badge bg-success">Darmowa dostawa</span>
+                        {{/ freeDelivery}}
+                    </div>
+                    <div class="col align-self-center">
+                        {{# additionalInfo}}
+                        <div class="fw-light fst-italic fs-6">{{info}}</div>
+                        {{/ additionalInfo}}
+                    </div>
+                    <div class="col-2 align-self-center text-end">
+                        <a href="#" class="btn btn-outline-success" role="button">Do sklepu</a>
+                    </div>
+                </div>
+            </div>
+        </li>
+    </ul>
+
     {{/ priceComparison}}
 </div>
