Changes: - Price comparison link redirecting to shop offer.

--- a/src/main/resources/templates/layout/priceComparison.html
+++ b/src/main/resources/templates/layout/priceComparison.html
@@ -22,7 +22,7 @@
                         {{/ additionalInfo}}
                     </div>
                     <div class="col-2 align-self-center text-end">
-                        <a href="#" class="btn btn-outline-success" role="button">Do sklepu</a>
+                        <a href="{{offerLink}}" class="btn btn-outline-success" role="button">Do sklepu</a>
                     </div>
                 </div>
             </div>
