--- a/src/main/resources/templates/layout/productDetails.html
+++ b/src/main/resources/templates/layout/productDetails.html
@@ -1,6 +1,6 @@
 <main class="flex-shrink-0">
     {{#productDetails}}
-    <div class="container">
+    <div class="container shadow">
         <div class=row>
             <div class="col">
                 <nav aria-label="breadcrumb">
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="row my-3">
-            <div class="col-12">
+            <div class="col">
                 <h1 class="display-6">{{title}}</h1>
             </div>
         </div>
