--- a/src/main/resources/templates/layout/setInfo.html
+++ b/src/main/resources/templates/layout/setInfo.html
@@ -1,5 +1,5 @@
 <main class="flex-shrink-0">
-    <div class="container">
+    <div class="container  shadow">
 
         <div class=row>
             <div class="col">
