Changes: - Template updates to better fit HTML 5 semantic of elements.

--- a/src/main/resources/templates/layout/footer.html
+++ b/src/main/resources/templates/layout/footer.html
@@ -1,6 +1,5 @@
-<footer class="footer mt-auto py-3">
+<footer class="mt-auto py-3">
     <div class="container">
-        <br/><br/>
         <p>LEGO® to znak towarowy firmy z Grupy LEGO. Niniejsza witryna nie jest sponsorowana, autoryzowana ani
             wspierana
             przez Grupę LEGO.</p>
