--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -1,16 +1,18 @@
-<nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">{{pageTitle}}</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <form class="d-flex" method="get" action="/">
-                <input class="form-control me-2" type="search" name="query" placeholder="Numer lub tytuł zestawu"
-                       aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Szukaj</button>
-            </form>
+<header>
+    <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
+        <div class="container py-2">
+            <a class="navbar-brand" href="/">{{pageTitle}}</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+                    aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <form class="d-flex" method="get" action="/">
+                    <input class="form-control me-2" type="search" name="query" placeholder="Numer lub tytuł zestawu"
+                           aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Szukaj</button>
+                </form>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
+</header>
