Changes: - Layout updates and unification.

--- a/src/main/resources/templates/layout/priceComparison.html
+++ b/src/main/resources/templates/layout/priceComparison.html
@@ -1,7 +1,7 @@
-<div class="container py-4 shadow">
+<div class="container shadow">
     <div class="row">
         <div class="col">
-            <h1 class="display-6">Porównaj ceny</h1>
+            <h1 class="fs-3 p-3">Porównaj ceny</h1>
         </div>
     </div>
     <ul class="list-group">
